@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/openoffice-3.1.0.ebuild,v 1.4 2009/05/24 08:46:28 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/openoffice-3.1.0.ebuild,v 1.5 2009/05/26 21:09:27 suka Exp $
 
 WANT_AUTOMAKE="1.9"
 EAPI=2
@@ -9,7 +9,7 @@ inherit bash-completion check-reqs db-use eutils fdo-mime flag-o-matic java-pkg-
 
 IUSE="binfilter cups dbus debug eds gnome gstreamer gtk kde ldap mono nsplugin odk opengl pam templates"
 
-MY_PV=3.1.0.4
+MY_PV=3.1.0.5
 PATCHLEVEL=OOO310
 SRC=OOo_${PV}_src
 MST=ooo310-m11
@@ -236,7 +236,6 @@ src_prepare() {
 	epatch "${FILESDIR}/ooo-env_log.diff"
 	cp -f "${FILESDIR}/base64.diff" "${S}/patches/hotfixes" || die
 	cp -f "${FILESDIR}/buildfix-gcc44.diff" "${S}/patches/hotfixes" || die
-	cp -f "${FILESDIR}/ooo_getline.diff" "${S}/patches/hotfixes" || die
 	cp -f "${FILESDIR}/solenv.workaround-for-the-kde-mess.diff" "${S}/patches/hotfixes" || die
 
 	#Use flag checks
